# rqt_frame_editor_plugin

./: .gitignore  .travis.yml  LICENSE  README.md
frame_editor/: CHANGELOG.rst  CMakeLists.txt  README.txt  package.xml  plugin.xml  setup.py
frame_editor/etc/: frame_editor.rviz  frames.yaml
frame_editor/launch/: frame_editor.launch  frame_editor_headless.launch  frames.yaml
frame_editor/mesh/: weber_pitek.stl
frame_editor/src/frame_editor/: FrameEditorGUI.ui  commands.py  constructors_geometry.py  constructors_std.py  editor.py  interface.py  interface_gui.py  interface_interactive_marker.py  interface_markers.py  interface_services.py  interface_tf.py  objects.py  project_plugin.py  rqt_editor.py  utils_tf.py
frame_editor/srv/: AlignFrame.srv  CopyFrame.srv  EditFrame.srv  GetFrame.srv  GetFrameNames.srv  LoadYaml.srv  SetFrame.srv  SetParentFrame.srv
intent_dispatcher/: CMakeLists.txt  package.xml  plugin.xml  setup.py
intent_dispatcher/src/intent_dispatcher/: commands.py  dispatcher.py  overview_dialog.py  provider.py  provider_lookup.py  provider_wizard.py  proxy.py  proxy_wizard.py  qt_dispatcher.py  yaml_io.py
intent_dispatcher/srv/: AddProvider.srv  AddProxy.srv
intent_dispatcher/ui/: dispatcher.ui  overview_dialog.ui  provider_wizard.ui  proxy_wizard.ui
toolbox/: CMakeLists.txt  package.xml  setup.py
toolbox/action/: GetPose.action
toolbox/msg/: PoseRPYStamped.msg
toolbox/scripts/: joint_trajectory_recorder.py
toolbox/src/toolbox/: project_plugin.py
toolbox/srv/: GetPoseService.srv
