<?xml version="1.0"?>
<package>
  <name>frame_editor</name>
  <version>1.0.0</version>
  <description>The frame_editor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="frank.naegele@ipa.fraunhofer.de">ipa-frn</maintainer>
  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://www.ipa.fraunhofer.de/</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author email="frank.naegele@ipa.fraunhofer.de">ipa-frn</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>interactive_markers</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>

  <run_depend>interactive_markers</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>

  </export>

</package>