<?xml version="1.0"?>
<package>
  <name>intent_dispatcher</name>
  <version>0.0.0</version>
  <description>LIAA Robot Programming Toolbox Intent Dispatcher</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="frank.naegele@ipa.fraunhofer.de">Frank Naegele</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Proprietary (free for project partners within and during the LIAA project)</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="frank.naegele@ipa.fraunhofer.de">Frank Naegele</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
